--- a/ViewController/public_html/create/whodAddDetails.jspx
+++ b/ViewController/public_html/create/whodAddDetails.jspx
@@ -57,7 +57,7 @@
                                             </af:selectOneChoice>
                                             <af:selectOneChoice label="Release Group" id="selectOneChoice2"
                                                                 required="false" autoSubmit="false"
-                                                                value="#{pageFlowScope.WhodWizardBean.currentPredictGroups}"
+                                                                value="ALL"
                                                                 labelStyle="white-space:nowrap"
                                                                 readOnly="#{WhodRenderingRulesBean.wizardDetailsDisableReleaseGroup}"
                                                                 rendered="#{WhodRenderingRulesBean.wizardDetailsRenderReleaseGroup}"
@@ -65,8 +65,18 @@
                                                 <f:selectItems value="#{pageFlowScope.WhodWizardBean.whodReleaseGroupSI}"
                                                                id="si4"/>
                                             </af:selectOneChoice>
-                                            <af:inputText label="Release Status - #{pageFlowScope.WhodWizardBean.currentStatus}" id="it11"
-                                                          value="#{pageFlowScope.WhodWizardBean.currentStatus ne 'CURRENT' ? pageFlowScope.WhodWizardBean.currentStatus : ''}"
+                                           <!-- <af:selectOneChoice label="Release Group" id="selectOneChoice2"
+                                                                required="false" autoSubmit="false"
+                                                                value="#{pageFlowScope.WhodWizardBean.currentPredictGroups}"
+                                                                labelStyle="white-space:nowrap"
+                                                                readOnly="#{WhodRenderingRulesBean.wizardDetailsDisableReleaseGroup}"
+                                                                rendered="#{WhodRenderingRulesBean.wizardDetailsRenderReleaseGroup}"
+                                                                contentStyle="color:#000000;">
+                                                <f:selectItems value="#{pageFlowScope.WhodWizardBean.whodReleaseGroupSI}"
+                                                               id="si4"/>
+                                            </af:selectOneChoice>-->
+                                            <af:inputText label="Release Status" id="it11"
+                                                          value="#{pageFlowScope.WhodWizardBean.currentStatus}"
                                                           showRequired="true" readOnly="true" columns="20" rows="1"
                                                           wrap="off" binding="#{WhodWizardUIBean.controlMQStatus}"
                                                           rendered="#{WhodRenderingRulesBean.wizardDetailsRenderNMQStatus}"
