--- a/ViewController/public_html/create/whodAddDetails.jspx
+++ b/ViewController/public_html/create/whodAddDetails.jspx
@@ -20,7 +20,7 @@
                                          inlineStyle="height:158px; width:1195px; padding:5px;">
                                 <af:panelGroupLayout id="pgl3" layout="horizontal" valign="top"
                                                      styleClass="AFStretchWidth">
-                                    <af:panelGroupLayout id="pgl4" valign="top">
+                                    <af:panelGroupLayout id="pgl4" valign="top" layout="vertical">
                                         <af:panelFormLayout id="pfl1">
                                             <af:selectOneChoice value="#{pageFlowScope.WhodWizardBean.currentExtension}"
                                                                 label="Extension" id="soc5" autoSubmit="true"
@@ -106,7 +106,7 @@
                                             </af:selectManyChoice>
                                         </af:panelFormLayout>
                                     </af:panelGroupLayout>
-                                    <af:panelGroupLayout id="pgl5">
+                                    <af:panelGroupLayout id="pgl5" layout="vertical">
                                         <af:panelFormLayout id="pfl3">
                                             <af:inputText label="Algorithm  " id="it14"
                                                           binding="#{WhodWizardUIBean.controlMqAlgorithm}"
@@ -157,7 +157,7 @@
                                                           value="#{(WhodRenderingRulesBean.wizardDetailsDisplayContentCode || pageFlowScope.WhodWizardBean.saved) ? pageFlowScope.WhodWizardBean.currentContentCode : null}"/>
                                         </af:panelFormLayout>
                                     </af:panelGroupLayout>
-                                    <af:panelGroupLayout id="pgl6">
+                                    <af:panelGroupLayout id="pgl6" layout="vertical">
                                         <af:panelFormLayout id="pfl4"
                                                             rendered="#{WhodRenderingRulesBean.wizardDetailsRenderInitalCreateInfo}">
                                             <af:inputText value="#{pageFlowScope.WhodWizardBean.currentInitialCreationBy}"
