--- a/ViewController/public_html/create/whodWizardSearch.jspx
+++ b/ViewController/public_html/create/whodWizardSearch.jspx
@@ -40,7 +40,7 @@
                                                                     autoSubmit="true" helpTopicId="NMAT_HELP_QUERY_TYPE"
                                                                     value="#{pageFlowScope.WhodWizardSearchBean.paramExtension}"
                                                                     valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.extensionChanged}"
-                                                                    rendered="#{pageFlowScope.setMode eq 'update' or pageFlowScope.setMode eq 'copy'}">
+                                                                    rendered="#{pageFlowScope.setMode eq 'update'}">
                                                     <f:selectItems value="#{pageFlowScope.WhodWizardBean.whodExtensionSI}"
                                                                    id="si31"/>
                                                     <af:selectItem id="si301" label="ALL" value="%"/>
@@ -49,7 +49,7 @@
                                                                     labelStyle="white-space:nowrap" valuePassThru="true"
                                                                     autoSubmit="true" helpTopicId="NMAT_HELP_QUERY_TYPE"
                                                                     value="#{pageFlowScope.WhodWizardSearchBean.paramLevelGroup}"
-                                                                    rendered="#{!(pageFlowScope.setMode eq 'update' or pageFlowScope.setMode eq 'copy')}"
+                                                                    rendered="#{!(pageFlowScope.setMode eq 'update')}"
                                                                     valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.onLevelGroupChange}"
                                                                     partialTriggers="soc2">
                                                     <f:selectItems value="#{pageFlowScope.WhodWizardSearchBean.whodLevelGroupSI}"
@@ -72,7 +72,8 @@
                                                                     labelStyle="white-space:nowrap"
                                                                     value="#{pageFlowScope.WhodWizardSearchBean.currentRelaseStatus}"
                                                                     autoSubmit="true"
-                                                                    valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.releaseStatusChanged}">
+                                                                    valueChangeListener="#{pageFlowScope.WhodWizardSearchBean.releaseStatusChanged}"
+                                                                    readOnly="#{pageFlowScope.setMode eq 'copy'}">
                                                     <af:selectItem label="All" value="ALL" id="si3"
                                                                    rendered='#{securityContext.userInRole["MQM"] or securityContext.userInRole ["Requestor"]}'/>
                                                     <f:selectItems value="#{pageFlowScope.WhodWizardSearchBean.whodReleaseStatusSI}"
