--- a/ViewController/public_html/report/whodReports.jspx
+++ b/ViewController/public_html/report/whodReports.jspx
@@ -20,8 +20,8 @@
                                                             valueChangeListener="#{WhodReportBean.reportNameChanged}">
                                             <af:selectItem label="--Select a report--" value="NULL" id="si48"/>
                                            <!-- <f:selectItems value="#{applicationScope.CSMQBean.reportsSelectItems}" id="si2a"/>-->
-                                           <af:selectItem label="WHODrug Query Report" value="WHO_REPORT" id="si21"/>
-                                           <af:selectItem label="Current WHODrug Queries" value="WHO_QUERY" id="si22"/>      
+                                           <af:selectItem label="WHODrug Query Report" value="WHOD_QUERY_REPORT" id="si21"/>
+                                           <af:selectItem label="Current WHODrug Queries" value="CURRENT_WHOD_QUERIES" id="si22"/>      
                                         </af:selectOneChoice>
                                         <af:inputDate id="id1" binding="#{WhodReportBean.cntrlStartDate}" columns="10" label="Start Date">
                                             <f:convertDateTime pattern="dd-MMM-yyyy"/>
