Copy module code check in

--- a/ViewController/public_html/create/whodWizardSearch.jspx
+++ b/ViewController/public_html/create/whodWizardSearch.jspx
@@ -156,6 +156,11 @@
                                             <af:commandButton text="Search" id="cb2"
                                                               actionListener="#{pageFlowScope.WhodWizardSearchBean.doSearch}"
                                                               partialSubmit="true"/>
+                                            <af:spacer width="10" height="10" id="s10"/>
+                                            <af:commandButton text="Copy" id="pt_cb3" disabled="false"
+                                                              actionListener="#{WhodWizardUIBean.openPopup}"
+                                                              rendered="#{pageFlowScope.setMode eq 'copy'}"/>
+                                            
                                         </af:panelGroupLayout>
                                     </af:subform>
                                 </af:panelGroupLayout>
@@ -226,6 +231,23 @@
                                     </af:table>
                                 </af:panelGroupLayout>
                                 <f:facet name="toolbar"/>
+                                <af:popup childCreation="deferred" autoCancel="disabled" id="pt_p3123"
+                              binding="#{WhodWizardUIBean.copyPopup}">
+                        <af:dialog id="pt_d4" title="Enter the Term Name and Term Level for the new CDG" type="cancel">
+                            <f:facet name="buttonBar">
+                            <af:commandButton text="Copy" id="pt_cb31" disabled="false"
+                                              action="#{WhodWizardUIBean.saveCopiedDetails}"/>
+                            </f:facet>
+                            <af:inputText label="Name" id="pt_it3"
+                                          value="#{pageFlowScope.WhodWizardBean.currentTermName}" autoSubmit="true"/>
+                             <af:selectOneChoice label="Level" id="soc11"
+                             value="#{pageFlowScope.WhodWizardBean.currentTermLevel}"
+                                                labelStyle="white-space:nowrap" autoSubmit="true">
+                             <f:selectItems value="#{pageFlowScope.WhodWizardBean.whodDictinoryLevelsSI}"
+                                                               id="si11"/>
+                                            </af:selectOneChoice>
+                        </af:dialog>
+                        </af:popup>
                             </af:panelBox>
                         </af:group>
                     </f:facet>
