Modified for report related changes

--- a/jrxml/WHOD_EXPORT.jrxml
+++ b/jrxml/WHOD_EXPORT.jrxml
@@ -72,8 +72,20 @@
 	<parameter name="INCLUDE_LLTS" class="java.lang.String"/>
 	<parameter name="I_IGNORE_PREDICT" class="java.lang.String"/>
 	<parameter name="I_RELEASE_STATUS" class="java.lang.String"/>
-	<queryString language="plsql">
+	<!--queryString language="plsql">
 		<![CDATA[
+		   SELECT term                 PADDED_TERM,
+                  term                 TERM,
+				  DICT_CONTENT_ID               DICT_CONTENT_ID,
+                  DICT_CONTENT_CODE               DICT_CONTENT_CODE,
+                  LEVEL_NAME              DEF_LEVEL_REF_SHORT_NAME,
+                  'PARENT' FORMATTED_SCOPE, '' COMMENT_TEXT, 
+                  0 CONNECT_LEVEL, 
+                  '' DISPLAY_ATTRIBUTE
+           FROM TABLE (cqt_whod_ui_tms_utils.query_content_data
+                 (pReleaseTypeLIST   => 'PROD',
+                  pDictContentID         => $P{I_DICT_CONTENT_ID}))
+		   UNION
 		  SELECT * FROM (
 		    SELECT ref_term               PADDED_TERM,
             ref_term               TERM,
@@ -88,7 +100,38 @@
          (pDictcontentID     => $P{I_DICT_CONTENT_ID},
           pReleaseTypeLIST   => 'PROD'))
       ORDER BY ref_term)]]>
-	</queryString>
+	</queryString-->
+	<queryString language="plsql">
+		<![CDATA[
+		    SELECT * FROM (
+               SELECT term                 PADDED_TERM,
+                      term                 TERM,
+				      DICT_CONTENT_ID               DICT_CONTENT_ID,
+					  DICT_CONTENT_CODE               DICT_CONTENT_CODE,
+                      LEVEL_NAME              DEF_LEVEL_REF_SHORT_NAME,
+                      'PARENT' FORMATTED_SCOPE, '' COMMENT_TEXT, 
+                      0 CONNECT_LEVEL, 
+                      '' DISPLAY_ATTRIBUTE,
+                      1 display_order
+                FROM TABLE (cqt_whod_ui_tms_utils.query_content_data
+                     (pReleaseTypeLIST   => 'PROD',
+                      pDictContentID         => $P{I_DICT_CONTENT_ID}))
+		        UNION		  
+		        SELECT ref_term               PADDED_TERM,
+					   ref_term               TERM,
+					   dict_content_ref_id    DICT_CONTENT_ID,
+					   dict_content_ref_code  DICT_CONTENT_CODE,
+					   level_ref_name         DEF_LEVEL_REF_SHORT_NAME,
+					   named_relation         FORMATTED_SCOPE,
+					   COMMENT_TEXT           COMMENT_TEXT,
+					   to_number(SUBSTR(level_ref_name,4,1))   CONNECT_LEVEL,
+			           COMMENT_TEXT DISPLAY_ATTRIBUTE,
+                       2 display_order
+				FROM TABLE (cqt_whod_ui_tms_utils.query_relation_data_below
+					(pDictcontentID     => $P{I_DICT_CONTENT_ID},
+                     pReleaseTypeLIST   => 'PROD'))
+				ORDER BY display_order, TERM)]]>
+	</queryString>	                 
 	<field name="PADDED_TERM" class="java.lang.String"/>
 	<field name="DICT_CONTENT_ID" class="java.lang.String"/>
 	<field name="DICT_CONTENT_CODE" class="java.lang.String"/>
@@ -121,10 +164,6 @@
 				<textFieldExpression><![CDATA["Dictionary Version: " + $P{DICTIONARY_VERSION}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement mode="Opaque" x="0" y="114" width="520" height="13" uuid="86fb237a-9ba8-489d-8ccc-1518852856c9"/>
-				<textFieldExpression><![CDATA["Currency: " + ($P{I_RELEASE_STATUS})]]></textFieldExpression>
-			</textField>
-			<textField>
 				<reportElement mode="Opaque" x="0" y="128" width="520" height="13" uuid="86fb237a-9ba8-489d-8ccc-1518852856c9"/>
 				<textFieldExpression><![CDATA["Status: " + ($P{ACTIVITY_STATUS} == 'A' ? "Active" : "Inactive")]]></textFieldExpression>
 			</textField>
@@ -135,15 +174,16 @@
 			<textField>
 				<reportElement mode="Opaque" x="0" y="156" width="520" height="13" uuid="c840aa6d-572c-4286-8b4b-aa92a2fb2219"/>
 				<textFieldExpression><![CDATA["Report Date/Time: " + new SimpleDateFormat("dd-MMM-yyyy h:mm a z").format(new Date())]]></textFieldExpression>
-			</textField>
+			</textField>			
 			<staticText>
-				<reportElement key="" mode="Opaque" x="678" y="170" width="50" height="26" forecolor="#000000" backcolor="#C0C0C0" uuid="20e53737-21f3-4da1-aebc-73d510098c32">
+				<reportElement key="" mode="Opaque" x="0" y="170" width="520" height="26" forecolor="#000000" backcolor="#C0C0C0" uuid="a699642d-f2a5-4bbe-9562-7ab4c775b686">
+					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<textElement>
-					<font isBold="true"/>
+					<font isBold="true" isUnderline="false"/>
 				</textElement>
-				<text><![CDATA[Weight]]></text>
+				<text><![CDATA[Term]]></text>
 			</staticText>
 			<staticText>
 				<reportElement key="" mode="Opaque" x="520" y="170" width="66" height="26" forecolor="#000000" backcolor="#C0C0C0" uuid="3c7f7795-f117-4928-995e-0e2e320c5d9c">
@@ -153,15 +193,6 @@
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Code]]></text>
-			</staticText>
-			<staticText>
-				<reportElement key="" mode="Opaque" x="625" y="170" width="53" height="26" forecolor="#000000" backcolor="#C0C0C0" uuid="6dcc7a2c-6693-49fd-af9d-d588e9965115">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<textElement>
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Category]]></text>
 			</staticText>
 			<staticText>
 				<reportElement key="" mode="Opaque" x="586" y="170" width="39" height="26" forecolor="#000000" backcolor="#C0C0C0" uuid="f414ef39-8a18-4592-9011-f0e565ec388d">
@@ -180,16 +211,6 @@
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Scope]]></text>
-			</staticText>
-			<staticText>
-				<reportElement key="" mode="Opaque" x="0" y="170" width="520" height="26" forecolor="#000000" backcolor="#C0C0C0" uuid="a699642d-f2a5-4bbe-9562-7ab4c775b686">
-					<property name="local_mesure_unitheight" value="pixel"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<textElement>
-					<font isBold="true" isUnderline="false"/>
-				</textElement>
-				<text><![CDATA[Term]]></text>
 			</staticText>
 		</band>
 	</title>
